testsuite/tests/misc/invalid_static_expr/invalid_concat_1.lkt
import common

@repr_name(true & "foo")
class FooNode implements Node[FooNode] {
}
